risc0/zirgen/dsl/test/repro/hex-literal-missing-body.zir
// RUN: not zirgen --emit=ast %s 2>&1 | FileCheck %s
// CHECK: error: Literal base prefix not followed by one or more digits
0x foo

